# second-brain

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  commands.md  commands.mmd  index.md  tui.md  usage.md
scripts/: serve_docs.py
src/second_brain/: __main__.py  app.py  cli.py  notes.py  tui.py
tests/: conftest.py  test_app.py  test_cli.py  test_logging_format.py  test_notes.py  test_tui.py
